[package]
name = "dyn-hash"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Hash trait that is object-safe"
documentation = "https://docs.rs/dyn-hash"
edition = "2021"
keywords = ["dyn", "hash", "trait-object"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/dyn-hash"
rust-version = "1.56"

[dev-dependencies]
rustversion = "1"
trybuild = "1"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
